# StructurePipe

./: .gitignore  CMakeLists.txt  CMakeLocal.txt.in  Include.cmake  README  Src.cmake
lib/spglib/: CMakeLists.txt  VERSION
lib/sslib/: CMakeLists.txt  CMakeLocal.txt  IncludeLists.txt  SrcLists.txt
lib/sslib/include/: SSLib.h  SSLibAssert.h  SSLibConfig.h.in  SSLibTypes.h
lib/sslib/include/build_cell/: AtomExtruder.h  AtomGroupDescription.h  AtomsDescription.h  ConstraintDescriptionId.h  DefaultCrystalGenerator.h  ICellGenerator.h  ICrystalStructureGenerator.h  IStructureGenerator.h  IUnitCellBlueprint.h  RandomCellDescription.h  RandomCellGenerator.h  RandomUnitCell.h  StructureBuilder.h  StructureDescription.h  StructureDescriptionMap.h  Types.h
lib/sslib/include/common/: AbstractFmidCell.h  Atom.h  AtomGroup.h  AtomSpeciesDatabase.h  AtomSpeciesId.h  ClusterDistanceCalculator.h  DistanceCalculator.h  DistanceCalculatorDelegator.h  NonOrthorhombicUnitCell.h  OrthoCellDistanceCalculator.h  OrthorhombicUnitCell.h  ReferenceDistanceCalculator.h  Structure.h  Types.h  UnitCell.h  UnitCellFactory.h  UniversalCrystalDistanceCalculator.h
lib/sslib/include/factory/: AbstractInputObject.h  FactoryError.h  IInputObject.h  ISchemaElementInstance.h  Scalar.h  ScalarValue.h  SchemaDoc.h  SchemaElement.h  SchemaList.h  SchemaMap.h  SchemaScalar.h  SchemaScalarValue.h  SsLibElements.h  SsLibFactoryYaml.h  SsLibYamlKeywords.h  SslibElements.h  YamlCommon.h
lib/sslib/include/io/: AdditionalData.h  IStructureReader.h  IStructureWriter.h  ResReaderWriter.h  StructureWriterManager.h
lib/sslib/include/potential/: GenericPotentialEvaluator.h  IGeomOptimiser.h  IParameterisable.h  IPotential.h  IPotentialEvaluator.h  SimplePairPotential.h  SimplePairPotentialData.h  StandardData.h  TersoffPotential.h  TersoffPotentialData.h  TpsdGeomOptimiser.h
lib/sslib/include/utility/: AbstractComparator.h  BoostFilesystem.h  CellParamsEnum.h  DistanceMatrixComparator.h  EdgeMap.h  Enum.h  GenericBufferedComparator.h  HeterogeneousMap.h  IBufferedComparator.h  IStructureComparator.h  IStructureSet.h  IndexRemappingView.h  Loops.h  MapEx.h  Math.h  MultiArray.h  MultiIdx.h  MultiIdxRange.h  PermutationRange.h  PropertiesMap.h  SortedDistanceComparator.h  SortedDistanceComparatorEx.h  StableComparison.h  UniqueStructureSet.h
lib/sslib/src/: SSLib.h  SSLibConfig.h.in
lib/sslib/src/build_cell/: AtomExtruder.cpp  AtomGroupDescription.cpp  AtomsDescription.cpp  CellConstraintDescription.cpp  DefaultCrystalGenerator.cpp  DistanceConstraintChecker.cpp  Minsep.cpp  RandomAtomPositioner.cpp  RandomCellDescription.cpp  RandomUnitCell.cpp  StructureBuilder.cpp  StructureDescription.cpp
lib/sslib/src/common/: AbstractFmidCell.cpp  Atom.cpp  AtomGroup.cpp  AtomSpeciesDatabase.cpp  AtomSpeciesId.cpp  DistanceCalculator.cpp  DistanceCalculatorDelegator.cpp  OrthoCellDistanceCalculator.cpp  ReferenceDistanceCalculator.cpp  Structure.cpp  StructureTreeEvent.cpp  UnitCell.cpp  UnitCellFactory.cpp  UniversalCrystalDistanceCalculator.cpp  Utils.cpp
lib/sslib/src/factory/: AbstractInputObject.cpp  Scalar.cpp  ScalarValue.cpp  SchemaDoc.cpp  SchemaElement.cpp  SchemaList.cpp  SchemaMap.cpp  SchemaScalar.cpp  SchemaScalarValue.cpp  (+3 more)
lib/sslib/tests/: CMakeLists.txt  sslibtest.cpp  sslibtest.h.in
src/: CMakeLists.txt  MakeMap.cpp  PipeLibTypes.h  SpTypes.h  StructureDiff.cpp  StructurePipe.cpp  StructurePipe.h  StructurePipeConfig.h  StructurePipeConfig.h.in  StructurePipeOld.cpp  spipe.cpp
src/blocks/: AutoScale.cpp  BuildStructures.cpp  BuildStructures.h  Clone.cpp  Clone.h  CutAndPaste.cpp  CutAndPaste.h  DetermineSpaceGroup.cpp  DetermineSpaceGroup.h  EdgeDetect.h  FindSymmetryGroup.cpp  GeomOptimise.cpp  KeepStableCompositions.cpp  KeepStableCompositions.h  KeepTopN.cpp  KeepTopN.h  KeepWithinXPercent.cpp  KeepWithinXPercent.h  LoadPotStructures.cpp  LoadPotStructures.h  LoadSeedStructures.cpp  LoadSeedStructures.h  LoadStructures.cpp  LoadStructures.h  LowestFreeEnergy.cpp  LowestFreeEnergy.h  MakeConvexHull.cpp  MakeConvexHull.h  MakeMap.cpp  MakeMap.h  NiggliReduce.cpp  NiggliReduction.cpp  NiggliReduction.h  ParamGeomOptimise.cpp  ParamGeomOptimise.h  ParamPotentialGo.cpp  ParamPotentialGo.h  PasteFragment.cpp  PasteFragment.h  PotentialGo.cpp  (+20 more)
src/common/: Assert.h  CommonData.cpp  CommonData.h  DataLocation.h  DataTable.cpp  DataTable.h  DataTableValueChanged.cpp  DataTableValueChanged.h  DataTableWriter.cpp  DataTableWriter.h  FactoryError.h  GlobalData.cpp  GlobalData.h  IDataTableChangeListener.h  PipeBuilder.cpp  PipeBuilder.h  PipeFactoryYaml.cpp  PipeFactoryYaml.h  PipeFunctions.cpp  PipeFunctions.h  SharedData.cpp  SharedData.h  SsLibFactoryYaml.cpp  SsLibFactoryYaml.h  SsLibYamlKeywords.h  StructureData.cpp  StructureData.h  TableWriter.cpp  UtilityFunctions.cpp  UtilityFunctions.h  YamlCommon.h  YamlInputObjectAdapter.cpp  YamlInputObjectAdapter.h  YamlInputObjectIteratorAdapter.cpp  YamlInputObjectIteratorAdapter.h  YamlKeywords.h
src/factory/: BlockFactory.cpp  PipeEngineFactory.cpp  PipeEngineFactory.h  YamlSchema.h
src/io/: BlockLoaderType.cpp  BlockLoaderType.h
src/mspipe/: MetaStructurePipe.cpp  MetaStructurePipe.h  MetaStructurePipeData.cpp  MetaStructurePipeData.h  MetaStructurePipeSharedData.h
src/mspipe/blocks/: ConvexHullGenerator.cpp  ConvexHullGenerator.h  RunSPipe.cpp  RunSPipe.h  StoichiometrySearch.cpp  StoichiometrySearch.h
src/utility/: DataTable.cpp  DataTable.h  DataTableInserters.cpp  DataTableInserters.h  DataTableSupport.cpp  DataTableSupport.h  DataTableValueChanged.cpp  DataTableValueChanged.h  DataTableWriter.cpp  DataTableWriter.h  IDataTableChangeListener.h  Initialisation.cpp  PipeDataInitialisation.cpp
tests/: CMakeLists.txt  spipetest.cpp  spipetest.h
tests/blocks/: CutAndPasteTest.cpp  KeepTopNTest.cpp  KeepWithinXPercentTest.cpp  LoadSeedStructuresTest.cpp  LoadStructuresTest.cpp  LowestFreeEnergyTest.cpp  PasteFragmentTest.cpp  ShrinkTest.cpp  StoichiometrySearchTest.cpp
tests/factory/: test.ssearch
tests/utility/: DataTableTest.cpp
(+126 files in other folders)
